cabal-version:   3.0
name:            AdventOfCode2022
version:         0.1.0.0
synopsis:        Solutions for Advent of Code 2022
homepage:        https://github.com/periodic/AdventOfCode2022
license:         MIT
license-file:    LICENSE
author:          Drew Haven
maintainer:      drew.haven@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common lang
  ghc-options:        -Wall
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude

  build-depends:      relude ^>=1.1.0.0
  default-extensions:
    ApplicativeDo
    BangPatterns
    DeriveFoldable
    DeriveTraversable
    DerivingStrategies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    StandaloneDeriving
    TupleSections
    TypeApplications

library
  import:           lang
  exposed-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day06.Windows
    Day07
    Day08
    Day08.Map
    Day09
    Day10
    Day11
    Day12
    Exercise

  other-modules:
    Utils.Constraints
    Utils.ParserHelpers
    Utils.Vector3
    Utils.Vector4

  build-depends:
    , attoparsec  ^>=0.14.4
    , base        ^>=4.16.3.0
    , containers  ^>=0.6.5.1
    , linear      ^>=1.21.10
    , mtl         ^>=2.2.2
    , vector
    , pqueue

  hs-source-dirs:   src
  default-language: Haskell2010

executable AdventOfCode2022
  import:           lang
  main-is:          Main.hs
  other-modules:
    Common
    Runner

  build-depends:
    , AdventOfCode2022
    , attoparsec            ^>=0.14.4
    , base                  ^>=4.16.3.0
    , criterion             ^>=1.6.0.0
    , optparse-applicative  ^>=0.17.0.0
    , statistics            ^>=0.16.1.0

  hs-source-dirs:   app
  default-language: Haskell2010

test-suite tests
  import:             lang
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:
    Day01Spec
    Day07Spec
    Day08Spec
    Day09Spec
    Day10Spec
    Day11Spec
    Day12Spec

  build-depends:
    , AdventOfCode2022
    , attoparsec          ^>=0.14.4
    , base                ^>=4.16.3.0
    , hspec               ^>=2.10.6
    , hspec-contrib       ^>=0.5.1.1
    , neat-interpolation  ^>=0.5.1.3
    , QuickCheck          ^>=2.14.2
    , containers          ^>=0.6.5.1

  hs-source-dirs:     tests
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ^>=2.10.6
